--- a/15_11_2021.css
+++ b/15_11_2021.css
@@ -3,6 +3,11 @@ h1 {
   color: red;
   text-decoration: underline;
   font-family: tahoma, helvetica, sans-serif;
+  text-align: center;
+  border: thick solid red;
+  text-decoration: none;
+  padding: 1ex;
+  width: 50%;
 }
 em {
   font-style: normal;
@@ -13,4 +18,21 @@ em {
 
 li {
   list-style: square;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+li:first-child {
+  border: thick solid green;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  padding: 1ex;
+  width: 40%;
+}
+
+p.centered {
+  text-align: center;
+  width: 50%;
 }
